Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-39696

Intermittent test failure: CouchKVStore::initialize: no vbstate for vb:X

    XMLWordPrintable

Details

    • Triaged
    • 1
    • Unknown

    Description

      Seen in various tests, for example:

      Failure of GoogleTest 'DcpConnMapTest.AvoidDoubleLockToVBStateAtSetVBucketState':
      [2020-06-02T07:01:40.279Z] [ RUN      ] DcpConnMapTest.AvoidLockInversionInSetVBucketStateAndNewProducerExistingCookie
      [2020-06-02T07:01:40.279Z] unknown file: Failure
      [2020-06-02T07:01:40.279Z] C++ exception with description "CouchKVStore::initialize: no vbstate for vb:0" thrown in SetUp().
      [2020-06-02T07:01:40.279Z] [  FAILED  ] DcpConnMapTest.AvoidLockInversionInSetVBucketStateAndNewProducerExistingCookie (6 ms)
      

      Attachments

        Issue Links

          For Gerrit Dashboard: MB-39696
          # Subject Branch Project Status CR V

          Activity

            People

              owend Daniel Owen
              trond Trond Norbye
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes

                  PagerDuty