MB-39696: Improve exception messages in CouchKVStore::initialize

The function may fail because of multiple/different errors, but we throw
a generic "no vbstate" error message.

Change-Id: I1cfaa6b0fada3686af4bab7c93b1e4433dbc2b4b
Reviewed-on: http://review.couchbase.org/c/kv_engine/+/143192
Reviewed-by: Trond Norbye <trond.norbye@couchbase.com>
Tested-by: Paolo Cocchi <paolo.cocchi@couchbase.com>